--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -24630,5 +24630,93 @@
         "published": "Mon, 22 Dec 2025 06:25:56 +0000",
         "source": "Digit.in",
         "summary": "When you open a chat window with Gemini or ChatGPT, the experience feels strangely personal. You ask a question, and the artificial intelligence responds with phrases like \u201cI think,\u201d \u201cI feel,\u201d or \u201cI\u2019m sorry.\u201d The use of first-person language is so natural that it is easy to momentarily forget you are not talking to a [&#8230;]"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/ipo-bound-rentomojo-doubles-net-profit-on-37-revenue-growth-in-fy25/articleshow/126117232.cms",
+        "title": "IPO-bound Rentomojo doubles net profit on 37% revenue growth in FY25",
+        "link": "https://economictimes.indiatimes.com/tech/startups/ipo-bound-rentomojo-doubles-net-profit-on-37-revenue-growth-in-fy25/articleshow/126117232.cms",
+        "published": "Mon, 22 Dec 2025 12:54:08 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Rentomojo, a furniture and electronics rental startup, reported a significant profit increase to Rs 43 crore in fiscal year 2025. Operating revenue also saw a 37% jump. The company is preparing for an initial public offering in fiscal year 2027. With over 2.2 lakh subscribers and 71 offline stores across 23 cities, Rentomojo is strengthening its market position."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/starlink-in-the-crosshairs-how-russia-could-attack-elon-musks-conquering-of-space/articleshow/126117097.cms",
+        "title": "Starlink in the crosshairs: How Russia could attack Elon Musk's conquering of space",
+        "link": "https://economictimes.indiatimes.com/tech/technology/starlink-in-the-crosshairs-how-russia-could-attack-elon-musks-conquering-of-space/articleshow/126117097.cms",
+        "published": "Mon, 22 Dec 2025 12:46:55 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "NATO intelligence services suspect Russia is developing a \"zone-effect\" anti-satellite weapon to target Elon Musk's Starlink constellation with shrapnel clouds. This weapon aims to disrupt Western space superiority aiding Ukraine, but analysts question its feasibility due to catastrophic collateral damage risks to all orbiting systems."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/chinas-vice-commerce-minister-met-apple-coo-on-friday/articleshow/126116961.cms",
+        "title": "China's vice commerce minister met Apple COO on Friday",
+        "link": "https://economictimes.indiatimes.com/tech/technology/chinas-vice-commerce-minister-met-apple-coo-on-friday/articleshow/126116961.cms",
+        "published": "Mon, 22 Dec 2025 12:38:45 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "In the meeting, China's \u200bvice commerce minister \u2060Li Chenggang said \u200cChina will provide greater opportunities to foreign companies, including Apple, and \u200dhe hoped Apple would continue \u200dto \u2060work \u2060with Chinese partners and develop the Chinese market"
+    },
+    {
+        "id": "https://yourstory.com/2025/12/serendipity-arts-festival-goa-creativity-photography",
+        "title": "Art, beats, cuisine: Serendipity Arts Festival celebrates 10th edition in Goa",
+        "link": "https://yourstory.com/2025/12/serendipity-arts-festival-goa-creativity-photography",
+        "published": "Sat, 20 Dec 2025 05:02:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "In this photo essay, we showcase a range of outstanding creative works from SAF 2025 in Goa, along with curator insights."
+    },
+    {
+        "id": "https://inc42.com/startups/how-indian-brands-are-using-product-and-distribution-to-scale-beyond-metros/",
+        "title": "How Indian Brands Are Using Product And Distribution To Scale Beyond Metros",
+        "link": "https://inc42.com/startups/how-indian-brands-are-using-product-and-distribution-to-scale-beyond-metros/",
+        "published": "Mon, 22 Dec 2025 07:30:30 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"How Indian Brands Are Using Product And Distribution To Scale Beyond Metros\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Rukam-Capital-FTR-2.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />India\u2019s retail market, valued at $1.06 Tn, is projected to reach $1.93 Tn by 2030, growing at an annual rate&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-video-siddharth-pillai-non-consensual-intimate-images-isnt-enough/",
+        "title": "Video: Why Takedown of non consensual intimate images Aren\u2019t Enough: RATI Foundation on Online Sexual Harm in India",
+        "link": "https://www.medianama.com/2025/12/223-video-siddharth-pillai-non-consensual-intimate-images-isnt-enough/",
+        "published": "Mon, 22 Dec 2025 08:08:31 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Removing non consensual intimate images from the internet does not always stop online abuse. This video explains why harm often continues even after takedowns.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-video-siddharth-pillai-non-consensual-intimate-images-isnt-enough/\">Video: Why Takedown of non consensual intimate images Aren\u2019t Enough: RATI Foundation on Online Sexual Harm in India</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.digit.in/news/mobile-phones/google-pixel-9-pro-price-drops-by-over-rs-25850-on-amazon-check-deal-details-here.html",
+        "title": "Google Pixel 9 Pro price drops by over Rs 25,850 on Amazon: Check deal details here",
+        "link": "https://www.digit.in/news/mobile-phones/google-pixel-9-pro-price-drops-by-over-rs-25850-on-amazon-check-deal-details-here.html",
+        "published": "Mon, 22 Dec 2025 08:06:52 +0000",
+        "source": "Digit.in",
+        "summary": "Just months after the launch of the Pixel 10 series, Google\u2019s previous flagship, the Pixel 9 Pro, has seen a massive price drop on Amazon. The smartphone is now discounted by over Rs 25,850, bringing its effective price below Rs 84,200. With its premium design, Google\u2019s custom Tensor processor, and a powerful triple-camera setup, the [&#8230;]"
+    },
+    {
+        "id": "https://www.digit.in/kn/news/mobile-phones/oneplus-15r-first-sale-starts-today-grab-jabardast-offer-available-for-a-limited-time.html",
+        "title": "OnePlus 15R \u0cb8\u0ccd\u0cae\u0cbe\u0cb0\u0ccd\u0c9f\u0ccd\u200c\u0cab\u0ccb\u0ca8\u0ccd \u0cae\u0cca\u0ca6\u0cb2 \u0cae\u0cbe\u0cb0\u0cbe\u0c9f \u0cb6\u0cc1\u0cb0\u0cc1! \u0c9c\u0cac\u0cb0\u0ccd\u0ca6\u0cb8\u0ccd\u0ca4\u0ccd \u0c86\u0cab\u0cb0\u0ccd \u0cb2\u0cbf\u0cae\u0cbf\u0c9f\u0cc6\u0ca1\u0ccd \u0cb8\u0cae\u0caf\u0c95\u0ccd\u0c95\u0cc6 \u0cb2\u0cad\u0ccd\u0caf!",
+        "link": "https://www.digit.in/kn/news/mobile-phones/oneplus-15r-first-sale-starts-today-grab-jabardast-offer-available-for-a-limited-time.html",
+        "published": "Mon, 22 Dec 2025 08:00:31 +0000",
+        "source": "Digit.in",
+        "summary": "\u0c87\u0ca4\u0ccd\u0ca4\u0cc0\u0c9a\u0cbf\u0ca8 \u0caa\u0ccd\u0cb0\u0cc0\u0cae\u0cbf\u0caf\u0c82 \u0cae\u0ca7\u0ccd\u0caf\u0cae \u0cb6\u0ccd\u0cb0\u0cc7\u0ca3\u0cbf\u0caf \u0c95\u0cca\u0ca1\u0cc1\u0c97\u0cc6\u0caf\u0cbe\u0c97\u0cbf \u0ca6\u0cc7\u0cb6\u0ca6\u0cb2\u0ccd\u0cb2\u0cbf \u0c85\u0ca8\u0cbe\u0cb5\u0cb0\u0ca3\u0c97\u0cca\u0c82\u0ca1 \u0ca8\u0c82\u0ca4\u0cb0 \u0c87\u0c82\u0ca6\u0cc1 \u0cad\u0cbe\u0cb0\u0ca4\u0ca6\u0cb2\u0ccd\u0cb2\u0cbf \u0cae\u0cbe\u0cb0\u0cbe\u0c9f\u0c95\u0ccd\u0c95\u0cc6 \u0cac\u0cb0\u0cc1\u0ca4\u0ccd\u0ca4\u0cbf\u0ca6\u0cc6. \u0c88 \u0cb8\u0ccd\u0cae\u0cbe\u0cb0\u0ccd\u0c9f\u0ccd\u200c\u0cab\u0ccb\u0ca8\u0ccd \u0c95\u0ccd\u0cb5\u0cbe\u0cb2\u0ccd\u0c95\u0cbe\u0cae\u0ccd\u200c\u0ca8 \u0cb8\u0ccd\u0ca8\u0cbe\u0caa\u0ccd\u200c\u0ca1\u0ccd\u0cb0\u0cbe\u0c97\u0ca8\u0ccd 8 \u0c9c\u0cc6\u0ca8\u0ccd 5 \u0c9a\u0cbf\u0caa\u0ccd\u200c\u0cb8\u0cc6\u0c9f\u0ccd, 165Hz AMOLED \u0ca1\u0cbf\u0cb8\u0ccd\u0caa\u0ccd\u0cb2\u0cc7 \u0cae\u0ca4\u0ccd\u0ca4\u0cc1 OIS \u0ca8\u0cca\u0c82\u0ca6\u0cbf\u0c97\u0cc6 50MP \u0cae\u0cc6\u0c97\u0cbe\u0caa\u0cbf\u0c95\u0ccd\u0cb8\u0cc6\u0cb2\u0ccd \u0cb8\u0ccb\u0ca8\u0cbf \u0cb8\u0cc6\u0ca8\u0ccd\u0cb8\u0cb0\u0ccd \u0ca8\u0cc7\u0ca4\u0cc3\u0ca4\u0ccd\u0cb5\u0ca6 \u0cb8\u0cc1\u0ca7\u0cbe\u0cb0\u0cbf\u0ca4 \u0c95\u0ccd\u0caf\u0cbe\u0cae\u0cc6\u0cb0\u0cbe \u0cb5\u0ccd\u0caf\u0cb5\u0cb8\u0ccd\u0ca5\u0cc6\u0caf\u0ca8\u0ccd\u0ca8\u0cc1 \u0cb9\u0cca\u0c82\u0ca6\u0cbf\u0ca6\u0cc6. OnePlus 15R \u0cb9\u0ccd\u0caf\u0cbe\u0c82\u0ca1\u0ccd\u200c\u0cb8\u0cc6\u0c9f\u0ccd \u0c85\u0ca8\u0ccd\u0ca8\u0cc1 \u0ca6\u0cca\u0ca1\u0ccd\u0ca1 7,400mAh \u0cac\u0ccd\u0caf\u0cbe\u0c9f\u0cb0\u0cbf\u0caf\u0cca\u0c82\u0ca6\u0cbf\u0c97\u0cc6 \u0cab\u0cbe\u0cb8\u0ccd\u0c9f\u0ccd 80W \u0c9a\u0cbe\u0cb0\u0ccd\u0c9c\u0cbf\u0c82\u0c97\u0ccd \u0cae\u0ca4\u0ccd\u0ca4\u0cc1 \u0ca6\u0cc0\u0cb0\u0ccd\u0c98\u0cbe\u0cb5\u0ca7\u0cbf\u0caf \u0cb8\u0cbe\u0cab\u0ccd\u0c9f\u0ccd\u200c\u0cb5\u0cc7\u0cb0\u0ccd \u0cac\u0cc6\u0c82\u0cac\u0cb2\u0ca6\u0cca\u0c82\u0ca6\u0cbf\u0c97\u0cc6 \u0cb8\u0c9c\u0ccd\u0c9c\u0cc1\u0c97\u0cca\u0cb3\u0cbf\u0cb8\u0cbf\u0ca6\u0cc6. \u0c87\u0ca6\u0cc1 \u0c85\u0ca6\u0cb0 \u0cac\u0cc6\u0cb2\u0cc6 \u0cb5\u0cbf\u0cad\u0cbe\u0c97\u0ca6\u0cb2\u0ccd\u0cb2\u0cbf \u0c95\u0cbe\u0cb0\u0ccd\u0caf\u0c95\u0ccd\u0cb7\u0cae\u0ca4\u0cc6-\u0c9a\u0cbe\u0cb2\u0cbf\u0ca4 [&#8230;]"
+    },
+    {
+        "id": "https://www.digit.in/hi/features/entertainment/aashram-season-4-release-timeline-streaming-platform-starcast-baba-nirala-comeback-bhopa-swami.html",
+        "title": "Aashram Season 4: \u091c\u092a\u0928\u093e\u092e-\u091c\u092a\u0928\u093e\u092e \u0915\u0947 \u0932\u093f\u090f \u0939\u094b \u091c\u093e\u0907\u090f \u0924\u0948\u092f\u093e\u0930! \u092c\u093e\u092c\u093e \u0928\u093f\u0930\u093e\u0932\u093e \u092c\u092c\u0940\u0924\u093e \u0914\u0930 \u092d\u094b\u092a\u093e \u0915\u094b \u0926\u093f\u0916\u093e\u090f\u0902\u0917\u0947 \u0914\u0915\u093e\u0924, \u091c\u093e\u0928\u0947\u0902 \u0915\u092c \u0914\u0930 \u0915\u0939\u093e\u0902 \u0926\u0947\u0916\u0947\u0902",
+        "link": "https://www.digit.in/hi/features/entertainment/aashram-season-4-release-timeline-streaming-platform-starcast-baba-nirala-comeback-bhopa-swami.html",
+        "published": "Mon, 22 Dec 2025 07:49:20 +0000",
+        "source": "Digit.in",
+        "summary": "Aashram Season 4 Release: \u091c\u092a\u0928\u093e\u092e-\u091c\u092a\u0928\u093e\u092e \u0915\u0930\u0928\u0947 \u0915\u0947 \u0932\u093f\u090f \u092b\u093f\u0930 \u0938\u0947 \u0924\u0948\u092f\u093e\u0930 \u0939\u094b \u091c\u093e\u0907\u090f. \u092c\u093e\u092c\u093e \u0928\u093f\u0930\u093e\u0932\u093e \u092b\u093f\u0930 \u0938\u0947 \u0926\u0930\u094d\u0936\u0928 \u0926\u0947\u0928\u0947 \u0935\u093e\u0932\u0947 \u0939\u0948\u0902. \u092c\u0949\u092c\u0940 \u0926\u0947\u0913\u0932 \u0915\u0940 \u0927\u092e\u093e\u0915\u0947\u0926\u093e\u0930 \u0938\u0940\u0930\u0940\u091c Aashram Season 4 \u092a\u0930 \u092c\u0921\u093c\u093e \u0905\u092a\u0921\u0947\u091f \u0938\u093e\u092e\u0928\u0947 \u0906 \u0917\u092f\u093e \u0939\u0948. \u0906\u092a\u0915\u094b \u092c\u0924\u093e \u0926\u0947\u0902 \u0915\u093f Aashram \u0915\u0947 \u092c\u093e\u0915\u0940 \u0938\u0940\u091c\u0928 \u0915\u094b \u0932\u094b\u0917\u094b\u0902 \u0915\u094b \u0915\u093e\u092b\u0940 \u092a\u094d\u092f\u093e\u0930 \u092e\u093f\u0932\u093e \u0939\u0948. \u0932\u094b\u0917\u094b\u0902 \u0928\u0947 \u092c\u093e\u092c\u093e \u0928\u093f\u0930\u093e\u0932\u093e [&#8230;]"
+    },
+    {
+        "id": "https://www.digit.in/news/mobile-phones/xiaomi-17-ultra-to-launch-soon-check-launch-timeline-specifications-and-price.html",
+        "title": "Xiaomi 17 Ultra to launch soon: Check launch timeline, specifications and price",
+        "link": "https://www.digit.in/news/mobile-phones/xiaomi-17-ultra-to-launch-soon-check-launch-timeline-specifications-and-price.html",
+        "published": "Mon, 22 Dec 2025 07:48:28 +0000",
+        "source": "Digit.in",
+        "summary": "Xiaomi is preparing to launch its next flagship smartphone, the Xiaomi 17 Ultra, which will take over from the Xiaomi 15 Ultra at the top of the company\u2019s lineup. Xiaomi has already confirmed that the device will debut in China later this week. Like its predecessors, the new flagship places a strong emphasis on photography, [&#8230;]"
+    },
+    {
+        "id": "https://www.digit.in/ta/features/tvs/big-size-qled-tv-with-huge-coupon-and-bank-offer-upto-rs-5000-discount-on-amazon.html",
+        "title": "\u0baa\u0bc6\u0bb0\u0bbf\u0baf \u0b9a\u0bc8\u0bb8\u0bcd QLED TV \u0baf\u0bbf\u0bb2\u0bcd \u0b85\u0ba4\u0bbf\u0bb0\u0b9f\u0bbf\u0baf\u0bbe\u0b95 \u0bb0\u0bc2,5000 \u0b9f\u0bbf\u0bb8\u0bcd\u0b95\u0bb5\u0bc1\u0ba3\u0bcd\u0b9f\u0bbf\u0ba9\u0bcd \u0b95\u0bc0\u0bb4\u0bcd \u0b95\u0bae\u0bcd\u0bae\u0bbf \u0bb5\u0bbf\u0bb2\u0bc8\u0baf\u0bbf\u0bb2\u0bcd \u0bb5\u0bbe\u0b99\u0bcd\u0b95\u0bb2\u0bbe\u0bae\u0bcd",
+        "link": "https://www.digit.in/ta/features/tvs/big-size-qled-tv-with-huge-coupon-and-bank-offer-upto-rs-5000-discount-on-amazon.html",
+        "published": "Mon, 22 Dec 2025 07:46:52 +0000",
+        "source": "Digit.in",
+        "summary": "\u0ba8\u0bc0\u0b99\u0bcd\u0b95\u0bb3\u0bcd \u0b89\u0b99\u0bcd\u0b95 \u0bb5\u0bc0\u0b9f\u0bcd\u0b9f\u0bc1\u0b95\u0bcd\u0b95\u0bc1 \u0b92\u0bb0\u0bc1 \u0baa\u0bc6\u0bb0\u0bbf\u0baf \u0b9a\u0bc8\u0bb8\u0bcd TV \u0bb5\u0bbe\u0b99\u0bcd\u0b95 \u0ba8\u0bbf\u0ba9\u0bc8\u0ba4\u0bcd\u0ba4\u0bbe\u0bb2\u0bcd \u0b87-\u0b95\u0bbe\u0bae\u0bb0\u0bcd\u0bb8\u0bcd \u0ba4\u0bb3\u0bae\u0bbe\u0ba9 \u0b85\u0bae\u0bc7\u0b9a\u0bbe\u0ba9\u0bbf\u0bb2\u0bcd 55-\u0b87\u0ba9\u0bcd\u0b9a\u0bcd \u0bae\u0bb1\u0bcd\u0bb1\u0bc1\u0bae\u0bcd 75-\u0b87\u0ba9\u0bcd\u0b9a\u0bcd \u0b9a\u0bc8\u0bb8\u0bcd QLED \u0b9f\u0bbf\u0bb5\u0bbf\u0baf\u0bbf\u0bb2\u0bcd \u0b95\u0bc2\u0baa\u0bcd\u0baa\u0ba9\u0bcd \u0bae\u0bb1\u0bcd\u0bb1\u0bc1\u0bae\u0bcd \u0baa\u0bc7\u0b99\u0bcd\u0b95\u0bcd \u0b86\u0baa\u0bb0\u0bbf\u0ba9\u0bcd \u0b95\u0bc0\u0bb4\u0bcd \u0bb0\u0bc2,5000 \u0b9f\u0bbf\u0bb8\u0bcd\u0b95\u0bb5\u0bc1\u0ba3\u0bcd\u0b9f\u0bcd \u0bb5\u0bb4\u0b99\u0bcd\u0b95\u0baa\u0bcd\u0baa\u0b9f\u0bc1\u0b95\u0bbf\u0bb1\u0ba4\u0bc1 \u0bae\u0bc7\u0bb2\u0bc1\u0bae\u0bcd \u0ba8\u0bc0\u0b99\u0bcd\u0b95\u0bb3\u0bcd \u0b87\u0ba8\u0bcd\u0ba4 \u0b86\u0baa\u0bb0\u0bc8 \u0baa\u0baf\u0ba9\u0bcd\u0baa\u0b9f\u0bc1\u0ba4\u0bcd\u0ba4\u0bbf \u0b95\u0bc1\u0bb1\u0bc8\u0ba8\u0bcd\u0ba4 \u0bb5\u0bbf\u0bb2\u0bc8\u0baf\u0bbf\u0bb2\u0bcd \u0b9f\u0bbf\u0bb5\u0bbf \u0bb5\u0bbe\u0b99\u0bcd\u0b95\u0bb2\u0bbe\u0bae\u0bcd \u0b87\u0ba4\u0bc8 \u0ba4\u0bb5\u0bbf\u0bb0 \u0ba8\u0bcb \u0b95\u0bcb\u0bb8\u0bcd\u0b9f\u0bcd EMI \u0bae\u0bb1\u0bcd\u0bb1\u0bc1\u0bae\u0bcd \u0b8e\u0b95\u0bcd\u0bb8\u0bcd\u0b9a\u0bc7\u0b9e\u0bcd \u0baa\u0bcb\u0ba9\u0bcd\u0bb1 \u0baa\u0bb2 \u0baa\u0bc6\u0bb1\u0bb2\u0bbe\u0bae\u0bcd \u0bae\u0bc7\u0bb2\u0bc1\u0bae\u0bcd \u0b87\u0ba8\u0bcd\u0ba4 \u0bb2\u0bbf\u0bb8\u0bcd\u0b9f\u0bcd\u0b9f\u0bbf\u0bb2\u0bcd \u0b87\u0bb0\u0bc1\u0b95\u0bcd\u0b95\u0bc1\u0bae\u0bcd \u0b9f\u0bbf\u0bb5\u0bbf\u0baf\u0bbf\u0bb2\u0bcd \u0b8e\u0ba9\u0bcd\u0ba9 \u0b8e\u0ba9\u0bcd\u0ba9 \u0b86\u0baa\u0bb0\u0bcd \u0b87\u0bb0\u0bc1\u0b95\u0bcd\u0b95\u0bbf\u0bb1\u0ba4\u0bc1 \u0b8e\u0ba9 [&#8230;]"
     }
 ]
